# tox_practice

./: README.md
.github/workflows/: tests.yml
tox_poetry_practice/: .coverage  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
tox_poetry_practice/tests/: test_main.py
tox_poetry_practice/tox_poetry_practice/: main.py  requirements.txt
