[metadata]
name = tox_poetry_practice
description = Practice tox library
author = harish kaimi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    tox_poetry_practice

install_requires =
    poetry>=1.4.1
    fastapi>=0.95.0
    requests>=2.28.2


python_requires = 3.11

package_dir =
    tox_poetry_practice

zip_safe = no

[options.extras_require]
testing =
    pytest>= 7.2.2
    pytest-cov>=4.0
    tox>= 4.4.7
    fastapi>= 0.95.0
    requests>= 2.28.2
    flake8>= 6.0.0
    mypy>= 1.1.1

[options.package_data]
tox_poetry_practice = py.typed

[flake8]
max-line-length = 160
